fix spacing on contact form errors, fixes #31

--- a/source/stylesheets/contact.css.sass
+++ b/source/stylesheets/contact.css.sass
@@ -3,6 +3,9 @@
     h1
       padding: 16px 16px 0
 
+    .errors
+      margin: 16px 16px 0
+
 form.contact
   max-width: 390px
 
